--- a/src/pages/SearchResults.css
+++ b/src/pages/SearchResults.css
@@ -71,8 +71,9 @@
 .recipe-name {
   font-size: 20px;
   font-weight: bold;
-  color: black;
+  color: black !important;
   margin-bottom: 5px;
+  display: block;
 }
 
 .recipe-details {
