--- a/src/pages/Timeline.css
+++ b/src/pages/Timeline.css
@@ -121,7 +121,7 @@
 
 .task-row {
   position: relative;
-  height: 60px;
+  height: 80px;
 }
 
 .task-bar {
@@ -130,7 +130,7 @@
   border-radius: 8px;
   padding: 10px;
   display: flex;
-  align-items: center;
+  align-items: bottom;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -146,15 +146,20 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   position: absolute;
   left: 10px;
-  top: 50%;
+  /* allow for task ticks to aligned within task bars, 
+  rather than floating above */
+  top: 75%;
   transform: translateY(-50%);
   white-space: nowrap;
 }
 
 .task-step {
   position: absolute;
-  top: -25px;
+  /* top: -5px; TODO */
   cursor: pointer;
+  display: flex;
+  align-items: center;
+
 }
 
 .task-step:hover {
@@ -178,7 +183,7 @@
   background: white;
   border: 3px solid black;
   border-radius: 50%;
-  margin: 0 auto 5px;
+  margin: 0 5px 5px 0;
 }
 
 .step-label {
