--- a/src/pages/GenerateTimeline.css
+++ b/src/pages/GenerateTimeline.css
@@ -48,6 +48,11 @@
   font-size: 18px;
   font-weight: bold;
   color: black;
+}
+
+.input-label .required {
+  color: #e74c3c;
+  margin-left: 4px;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -259,10 +264,4 @@
 
   .recipe-textarea {
     min-height: 150px;
-  }
-
-  .submit-button {
-    width: 100%;
-    font-size: 16px;
-  }
-}
+  
